kustomizations/search/app/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-web
  namespace: journal
spec:
  template:
    spec:
      containers:
      - name: search
        image: ghcr.io/elifesciences/search:latest
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /search
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 10
          timeoutSeconds: 10
        resources:
          requests:
            memory: "256Mi"
            cpu: "20m"
          limits:
            memory: "256Mi"
        volumeMounts:
        - name: config-volume
          mountPath: /app/config.php
          subPath: config.php
        - name: logs
          mountPath: /app/var/logs
      - name: logs
        image: cr.fluentbit.io/fluent/fluent-bit
        command: ["/fluent-bit/bin/fluent-bit", "-i", "tail", "-p", "path=/app/var/logs/all.json", "-p", "parser=json", "-o", "stdout", "-p", "format=json_stream"]
        volumeMounts:
        - name: logs
          mountPath: /app/var/logs
      volumes:
      - name: logs
        emptyDir: {}
      - name: config-volume
        configMap:
          name: search-config
          items:
          - key: config.php
            path: config.php
