kustomizations/search/app/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
