kustomizations/search/app/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-web
  annotations:
    cert-manager.io/cluster-issuer: "${cert_manager_issuer}"
spec:
  rules:
  - host: ${hostname}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: search-web
            port:
              number: 80
tls:
  - hosts:
    - ${hostname}
    secretName: search-web-tls
